# ashesh8500.github.io

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  OpenCode.md  README.md  Trunk.toml  archive.html  fractal-cognition-live-trader-explainer.html  fractal-cognition.html  index.html  resume.html
.github/workflows/: deploy.yml
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
assets/css/: style.css
assets/js/: archive-data.js  ascii-bg.js  ascii-dither-motion.js  ascii-swarm.js  ascii-viz.js  companion.js  main.js  prisml-chat.js  prisml-worker.js
assets/styling/: blog-fix.css  blog.css  desktop.css  main.css  navbar.css  reset.css  retro.css  windows.css
auditlayer/: index.html  plan.html
blog/: ai-journey.md  hello.md  welcome.md
docs/: redesign_plan.md
invite/day1/: index.html
invite/day2/: index.html
invite/intimate-evening/: index.html
invite/the-celebration/: index.html
portfolio/: README.md
portfolio/cogs185/: task_1_skeleton.ipynb
portfolio/cogs188/: technical_report.tex
portfolio/csa/: NYU_RV32I_6913.py  cheatsheet.tex  hw1.tex  hw2.tex  hw3.tex  hw4.tex  hw5.tex  hw6.tex
portfolio/systemopt/: FINDINGS 2.md  FINDINGS_REPORT.tex  PRESENTATION_SCRIPT.md  RESEARCH_SUMMARY.md  SNAPSHOT2_FINDINGS.md  STUDY 2.tex  research.py  (+3 more)
projects/: personal-website.md  rust-desktop-app.md  rust-learning.md  system-optimization-methods.html
silver-linings/: index.html  theme-blue-silver.html  theme-blue.html  theme-hallway.html  theme-silver.html
src/: main.rs
study/: index.html
tests/: bonsai-smoke 2.mjs
worker/: deepseek-proxy.js  wrangler.jsonc
(+15 files in other folders)
