[package]
name = "personal_web"
version = "0.1.0"
authors = ["ashesh8500 <ashesh8500@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31"
egui = "0.31"
regex = "1.10"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
