[package]
name = "personal_web"
version = "0.1.0"
authors = ["ashesh8500 <ashesh8500@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.31", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.31"
regex = "1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webbrowser = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element", 
  "HtmlCanvasElement",
  "Window",
] }
log = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
